--- a/_data/work.yaml
+++ b/_data/work.yaml
@@ -3,7 +3,7 @@
   playlist: PL8CeOEg8N98-PWtlQ9-7jayyDpxa3dmJM
   credits: Music, orchestration
   genre: Orchestral, electronic
-  description: "Arrangements of three beloved tracks from the Metroid series, including one performed by a [symphony orchestra](https://www.reddit.com/r/TheRedditSymphony/), featured on the acclaimed fan album [Harmony of a Hunter Returns](https://harmony.shinesparkers.net/) celebrating the 35 year anniversary of Metroid."
+  description: "Arrangements of three beloved tracks from the Metroid series, featured on the acclaimed fan album [Harmony of a Hunter Returns](https://harmony.shinesparkers.net/) celebrating the 35 year anniversary of Metroid."
   links:
     - url: https://vincerubinetti.bandcamp.com/album/emerald-cloud-lab
       icon: fab fa-bandcamp
