--- a/_data/follow.yaml
+++ b/_data/follow.yaml
@@ -1,22 +1,17 @@
-- url: https://vincerubinetti.bandcamp.com/
-  icon: fab fa-bandcamp
-  text: Bandcamp
-  tooltip: "**Download** and **stream** the official, highest-quality, most up-to-date versions of _all of my music_"
-
 - url: https://soundcloud.com/vincerubinetti
   icon: fab fa-soundcloud
   text: SoundCloud
-  tooltip: "**Stream** and **share** select songs and albums"
+  tooltip: "**Stream** and **share** _select_ songs and albums"
 
 - url: https://itunes.apple.com/us/artist/vincent-rubinetti/274886492
   icon: fab fa-apple
   text: Apple Music
-  tooltip: "**Stream** and **share** select songs and albums"
+  tooltip: "**Stream** and **share** _select_ songs and albums"
 
 - url: https://open.spotify.com/artist/2SRhEEt2tlDQWxzwfUo9Dl
   icon: fab fa-spotify
   text: Spotify
-  tooltip: "**Stream** and **share** select songs and albums"
+  tooltip: "**Stream** and **share** _select_ songs and albums"
 
 - url: https://www.youtube.com/c/VincentRubinetti
   icon: fab fa-youtube
