--- a/_data/listen.yaml
+++ b/_data/listen.yaml
@@ -1,12 +1,19 @@
-- title: Best Of
-  playlist: 652705266
-- title: Orchestral
-  playlist: 96734347
-- title: Electronic
-  playlist: 96734608
-- title: Pop, Rock
-  playlist: 96735483
-- title: Other
-  playlist: 96735680
-- title: Remixes
-  playlist: 96735846
+playlists:
+  - title: Best Of
+    id: 652705266
+  - title: Orchestral
+    id: 96734347
+  - title: Electronic
+    id: 96734608
+  - title: Pop, Rock
+    id: 96735483
+  - title: Other
+    id: 96735680
+  - title: Remixes
+    id: 96735846
+
+link:
+  url: https://vincerubinetti.bandcamp.com/
+  icon: fab fa-bandcamp
+  text: Complete Discography
+  tooltip: "**Download** and **stream** the official, highest-quality, most up-to-date versions of _all of my music_ on Bandcamp"
