--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,21 @@
+# build output
+dist/
+
+# generated types
+.astro/
+
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# environment variables
 .env
-_site
-.sass-cache
-.jekyll-cache
-.jekyll-metadata
-vendor
-debug.log
-node_modules
+.env.production
+
+# macOS-specific files
+.DS_Store
