--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
+  "name": "website",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "fresh": "rm -rf node_modules yarn.lock _site .jekyll-cache && yarn cache clean",
-    "tailwind-dev": "npx tailwindcss -i index.css -o styles.css --watch",
-    "tailwind": "npx tailwindcss -i index.css -o styles.css",
-    "jekyll-build": "bundle && bundle exec jekyll build",
-    "jekyll-serve": "bundle && bundle exec jekyll serve --open-url --livereload --trace",
-    "upload": "node ./upload.js",
-    "start": "yarn tailwind-dev | yarn jekyll-serve",
-    "build": "yarn tailwind && yarn jekyll-build",
-    "deploy": "yarn tailwind && yarn jekyll-build && yarn upload"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "devDependencies": {
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "autoprefixer": "^10.4.2",
-    "dotenv": "^16.0.0",
-    "postcss": "^8.4.6",
-    "ssh2-sftp-client": "^7.2.2",
-    "tailwindcss": "^3.0.18"
+  "dependencies": {
+    "@astrojs/vue": "^2.1.0",
+    "@vueuse/core": "^9.13.0",
+    "astro": "^2.1.0",
+    "vue": "^3.2.30"
   }
 }
