--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/vue": "^2.1.0",
     "@vueuse/core": "^9.13.0",
     "astro": "^2.1.0",
+    "shader-doodle": "^1.0.0-alpha.20",
     "vue": "^3.2.30"
   }
 }
