--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@vueuse/core": "^9.13.0",
     "astro": "^2.1.0",
     "shader-doodle": "^1.0.0-alpha.20",
+    "three": "^0.150.1",
     "vue": "^3.2.30"
+  },
+  "devDependencies": {
+    "@types/three": "^0.149.0"
   }
 }
