--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/vue": "^2.1.0",
     "@vueuse/core": "^9.13.0",
     "astro": "^2.1.0",
+    "linkify-string": "^4.1.1",
+    "linkifyjs": "^4.1.1",
     "three": "^0.150.1",
     "vue": "^3.2.30"
   },
