--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@astrojs/vue": "^2.1.0",
@@ -16,10 +17,13 @@
     "linkify-string": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "three": "^0.150.1",
-    "vue": "^3.2.30"
+    "vue": "^3.2.30",
+    "vue-tippy": "v6"
   },
   "devDependencies": {
     "@types/three": "^0.149.0",
+    "patch-package": "^6.5.1",
+    "postinstall-postinstall": "^2.1.0",
     "vite-svg-loader": "^4.0.0"
   }
 }
