incorp more orig files, more tweaks

--- a/package.json
+++ b/package.json
@@ -4,26 +4,28 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
+    "build": "astro build && node scripts/post-build.js",
     "preview": "astro preview",
     "astro": "astro",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "upload": "node scripts/upload.js"
   },
   "dependencies": {
-    "@astrojs/vue": "^2.1.0",
+    "@astrojs/vue": "^2.1.1",
     "@vueuse/core": "^9.13.0",
-    "astro": "^2.1.0",
+    "astro": "^2.2.2",
     "linkify-string": "^4.1.1",
     "linkifyjs": "^4.1.1",
-    "three": "^0.150.1",
-    "vue": "^3.2.30",
+    "three": "^0.151.3",
+    "vue": "^3.2.47",
     "vue-tippy": "v6"
   },
   "devDependencies": {
-    "@types/three": "^0.149.0",
+    "@types/three": "^0.150.1",
+    "dotenv": "^16.0.3",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
+    "ssh2-sftp-client": "^9.0.4",
     "vite-svg-loader": "^4.0.0"
   }
 }
