--- a/package.json
+++ b/package.json
@@ -14,19 +14,24 @@
     "clean": "rm -rf node_modules dist bun.lock && bun pm cache rm"
   },
   "dependencies": {
+    "@astrojs/vue": "^5.1.3",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.0",
-    "tailwindcss": "^4.1.17"
+    "lucide-vue-next": "^0.554.0",
+    "tailwindcss": "^4.1.17",
+    "vue": "^3.5.25"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@typescript-eslint/parser": "^8.47.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
-    "eslint-plugin-better-tailwindcss": "^3.7.11",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.6.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "typescript-eslint": "^8.47.0"
+    "prettier-plugin-tailwindcss": "^0.7.1",
+    "typescript-eslint": "^8.47.0",
+    "vite-svg-loader": "^5.1.0"
   }
 }
