--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "dependencies": {
     "@astrojs/vue": "^5.1.3",
     "@tailwindcss/vite": "^4.1.17",
+    "@vueuse/core": "^14.0.0",
     "astro": "^5.16.0",
+    "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.554.0",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
+    "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/parser": "^8.47.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
