--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.0.0",
     "astro": "^5.16.0",
+    "linkify-string": "^4.3.2",
+    "linkifyjs": "^4.3.2",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.554.0",
+    "slugify": "^1.6.6",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25"
   },
