--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "linkifyjs": "^4.3.2",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.554.0",
+    "reka-ui": "^2.6.0",
     "slugify": "^1.6.6",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25"
