--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.0.0",
     "astro": "^5.16.0",
+    "colorjs.io": "^0.6.0-beta.2",
+    "colorthief": "^2.6.0",
     "glslCanvas": "^0.2.6",
     "linkify-string": "^4.3.2",
     "linkifyjs": "^4.3.2",
