--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "astro": "^5.16.0",
     "colorjs.io": "^0.6.0-beta.2",
     "colorthief": "^2.6.0",
-    "glslCanvas": "^0.2.6",
+    "glsl-canvas-js": "^0.2.9",
     "linkify-string": "^4.3.2",
     "linkifyjs": "^4.3.2",
     "lodash-es": "^4.17.21",
