--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "linkifyjs": "^4.3.2",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.554.0",
+    "micromark": "^4.0.2",
     "reka-ui": "^2.6.0",
     "slugify": "^1.6.6",
     "tailwindcss": "^4.1.17",
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "youtube-video-element": "^1.8.1"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
