--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "soundcloud.ts": "^0.7.1",
     "typescript-eslint": "^8.47.0",
     "vite-svg-loader": "^5.1.0"
   }
