--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
+    "upload": "bun upload.ts",
     "astro": "astro",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
@@ -45,7 +46,9 @@
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "soundcloud.ts": "^0.7.1",
+    "ssh2-sftp-client": "^12.0.1",
     "typescript-eslint": "^8.47.0",
+    "vite-plugin-transform": "^2.0.1",
     "vite-svg-loader": "^5.1.0"
   }
 }
