--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "youtube-video-element": "^1.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/parser": "^8.47.0",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -47,7 +49,8 @@
     "prettier-plugin-tailwindcss": "^0.7.1",
     "soundcloud.ts": "^0.7.1",
     "ssh2-sftp-client": "^12.0.1",
-    "typescript-eslint": "^8.47.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.1",
     "vite-plugin-transform": "^2.0.1",
     "vite-svg-loader": "^5.1.0"
   }
