--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "upload": "bun upload.ts",
+    "upload": "bun run build && bun upload.ts",
     "astro": "astro",
     "lint": "eslint . --fix",
     "format": "prettier --write src/",
@@ -39,17 +39,14 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/parser": "^8.47.0",
-    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
-    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.6.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "soundcloud.ts": "^0.7.1",
     "ssh2-sftp-client": "^12.0.1",
-    "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.1",
     "vite-plugin-transform": "^2.0.1",
     "vite-svg-loader": "^5.1.0"
