--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
     "@tailwindcss/vite": "^4.1.17",
     "@vueuse/core": "^14.0.0",
     "astro": "^5.16.0",
-    "colorjs.io": "^0.6.0-beta.2",
-    "colorthief": "^2.6.0",
     "glsl-canvas-js": "^0.2.9",
     "linkify-string": "^4.3.2",
     "linkifyjs": "^4.3.2",
     "lodash-es": "^4.17.21",
     "lucide-vue-next": "^0.554.0",
     "micromark": "^4.0.2",
+    "node-vibrant": "^4.0.3",
     "reka-ui": "^2.6.0",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
