fix bc header and misc fixes

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@fontsource-variable/aleo": "^5.2.7",
     "@fontsource-variable/outfit": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
-    "@vueuse/core": "^14.0.0",
-    "astro": "^5.16.0",
+    "@vueuse/core": "^14.1.0",
+    "astro": "^5.16.4",
     "glsl-canvas-js": "^0.2.9",
     "linkify-string": "^4.3.2",
     "linkifyjs": "^4.3.2",
@@ -28,7 +28,7 @@
     "lucide-vue-next": "^0.554.0",
     "micromark": "^4.0.2",
     "node-vibrant": "^4.0.3",
-    "reka-ui": "^2.6.0",
+    "reka-ui": "^2.6.1",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "youtube-video-element": "^1.8.1"
@@ -37,13 +37,14 @@
     "@eslint/js": "^9.39.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@types/lodash-es": "^4.17.12",
-    "@typescript-eslint/parser": "^8.47.0",
+    "@types/ssh2-sftp-client": "^9.0.6",
+    "@typescript-eslint/parser": "^8.48.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.5.0",
-    "eslint-plugin-vue": "^10.6.0",
-    "prettier": "^3.6.2",
+    "eslint-plugin-vue": "^10.6.2",
+    "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.7.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "soundcloud.ts": "^0.7.1",
     "ssh2-sftp-client": "^12.0.1",
     "typescript-eslint": "^8.48.1",
